src/objects/AttachmentAux__c.object
<CustomObject>
    <description>This Object has been solely created because of a bug in the FrameWork which didnt enable Native Attachment Objects to be iterated using the Apex.StandardSetController funcionality.</description>
    <fields>
        <fullName>createdBy__c</fullName>
        <label>createdBy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>realId__c</fullName>
        <label>realId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weight__c</fullName>
        <label>weight</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AttachmentAux</label>
    <nameField>
        <label>AttachmentObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AttachmentAuxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>